--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -47,7 +47,7 @@
             tools:layout_editor_absoluteX="1dp">
 
             <TextView
-                android:id="@+id/textView_email"
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="50sp"
@@ -58,17 +58,17 @@
                 tools:layout_editor_absoluteX="50dp" />
 
             <EditText
-                android:id="@+id/email"
+                android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="40sp"
                 android:layout_marginHorizontal="50sp"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@+id/textView_email"
+                app:layout_constraintTop_toBottomOf="@+id/email"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
-                android:id="@+id/textView_pwd"
+                android:id="@+id/pwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="50sp"
@@ -80,21 +80,22 @@
                 tools:layout_editor_absoluteX="50dp" />
 
             <EditText
-                android:id="@+id/pwd"
+                android:id="@+id/et_pwd"
                 android:layout_width="match_parent"
                 android:layout_height="40sp"
                 android:layout_marginHorizontal="50sp"
-                app:layout_constraintTop_toBottomOf="@+id/textView_pwd"
+                app:layout_constraintTop_toBottomOf="@+id/pwd"
                 tools:layout_editor_absoluteX="16dp"
                 android:textSize="20sp"
+                android:inputType="textPassword"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/white"/>
 
             <Button
-                android:id="@+id/connection"
+                android:id="@+id/bt_connection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/pwd"
+                app:layout_constraintTop_toBottomOf="@+id/et_pwd"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="50sp"
                 android:text="Connexion"
